infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maplify-tech
  labels:
    name: maplify-tech
    environment: production
